2010-09-01  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/mod.c :
	  Add an initialization member to module structure to
	  track whether a loaded module has been fully initialized.

2010-08-31  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/genders.c :
	  Don't require genders filename specified to -F to be an absolute  
	  path. Instead, open genders file relative to PDSH_GENDERS_DIR,
	  which is /etc by default.

	* src/modules/genders.c :
	  Allow alternate genders file to be specified with the env
	  var PDSH_GENDERS_FILE.

	* src/common/hostlist.c :
	  Update to latest hostlist.c from LSD-Tools project with fix for 
	  multiple brackets in hostlists from sf.net user don-fanucci.

2010-03-16  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/ltdl.c, src/pdsh/ltdl.h :
	  Update libltdl from latest RHEL5.4 libtool.

2009-09-29  Mark Grondona <mgrondona@llnl.gov>

	* : tag pdsh-2.20.

	* src/pdsh/testcase.c (_test_xstrerrorcat) :
	  Ensure that the same strerror* function is used by the test
	  as is used in xstrerrorcat(), to avoid false test failures..

	* src/pdsh/pcp_client.c (pcp_client) :
	  Switch use of list_for_each to explicit list iterator to avoid
	  serialization fo pdcp.

2009-05-21  Mark Grondona <mgrondona@llnl.gov>

	* : tag pdsh-2.19.

	* configure.ac, config/ac_rcmd_rank_list.m4 :
	  Add new configure option --with-rcmd-rank-list= which may be
	  used to override default pdsh rcmd rank list (ordered list
	  of preferred rcmd connect modules).

	* src/modules/genders.c :
	  Always apply pdsh_rcmd_type genders attribute, even if no
	  genders options are used.

	* src/pdsh/mod.c :
	  Make pdsh module code reentrant safe. This fixes a bug where
	  pdsh was not translating names to alternates with the genders
	  module, because the global list iterator was being reset by
	  reentrant calling of module code.
	  Patch from Pythagoras Watson <py at llnl dot gov>.

	* src/common/error.c :